kubernetes/telegraf.yaml
# file: telegraf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  namespace: messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      containers:
      - name: telegraf
        image: telegraf:1.26
        volumeMounts:
          - name: config-volume
            mountPath: /etc/telegraf/telegraf.conf
            subPath: telegraf.conf
      volumes:
      - name: config-volume
        configMap:
          name: telegraf-config
          items:
            - key: telegraf.conf
              path: telegraf.conf
