kubernetes/influxDB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb:2.7
        ports:
          - containerPort: 8086
        volumeMounts:
          - name: influxdb-storage
            mountPath: /var/lib/influxdb2
          - name: token-volume
            mountPath: /etc/secret
            readOnly: true
      volumes:
      - name: influxdb-storage
        persistentVolumeClaim:
          claimName: influxdb-pvc
      - name: token-volume
        secret:
          secretName: influxdb-token

---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: monitoring
spec:
  selector:
    app: influxdb
  ports:
  - port: 8086
    targetPort: 8086
    protocol: TCP
    name: http
  type: ClusterIP
